stl-test/Tests/array_view/array_view/Negative/test1.cpp
//#error
#include <coordinate>
int main(void)
{
    std::array_view<int, -1> cord;
}
